...
                <Image
                  source={require('../../../assets/images/logo-ifvm.png')}
                  style={styles.logo}
                  resizeMode="contain"
                />
              </View>
              <View style={styles.headerTextContainer} testID="dashboard-header">
                <ThemedText style={styles.headerGreeting}>Bonjour</ThemedText>
                <ThemedText style={styles.headerName}>
                  {user?.prenom} {user?.nom}
                </ThemedText>
                <ThemedText style={styles.headerRole}>Agent de terrain</ThemedText>
              </View>
...
